ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/Change_Control_PA__c.object-meta.xml
<CustomObject>
    <label>Change Control Pre-Assessment</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Change Control Pre-Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Control Pre-Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>