ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Assessment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Reason__c</fullName>
    <label>Assessment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Assessment_Result__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Resource</fullName>
            </value>
            <value>
                <fullName>Request Denied</fullName>
            </value>
            <value>
                <fullName>Duplicate Request</fullName>
            </value>
            <value>
                <fullName>Captured in DMS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>