ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Assessment_reason_comment__c.field-meta.xml
<CustomField>
    <fullName>Assessment_reason_comment__c</fullName>
    <inlineHelpText>If Assessment Reason is Request Denied then reason comment field is required.</inlineHelpText>
    <label>Assessment reason comment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>