ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Assessment_Result__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Result__c</fullName>
    <description>For Change Control QA Use Only</description>
    <inlineHelpText>For Change Control QA Use Only</inlineHelpText>
    <label>Assessment Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>