ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Pre_Assessments2</relationshipName>
    <type>Lookup</type>
</CustomField>