ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Assigned_To_Area__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Area__c</fullName>
    <label>Assigned To Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Analytical Development</fullName>
            </value>
            <value>
                <fullName>Business Team</fullName>
            </value>
            <value>
                <fullName>Drug &amp; Device Development</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Learning &amp; Development</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Materials Management</fullName>
            </value>
            <value>
                <fullName>Metrology</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Packaging &amp; Labeling</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Quality Control</fullName>
            </value>
            <value>
                <fullName>Regulatory Affairs</fullName>
            </value>
            <value>
                <fullName>Shipping &amp; Receiving</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>