ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Change_Control_Id__c.field-meta.xml
<CustomField>
    <fullName>Change_Control_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field will hold relation to CC record which was created via flow automation .</description>
    <label>Change Control Id</label>
    <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
    <relationshipLabel>Change Control Pre-Assessments</relationshipLabel>
    <relationshipName>Change_Control_Pre_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>