ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Change_Scope__c.field-meta.xml
<CustomField>
    <fullName>Change_Scope__c</fullName>
    <inlineHelpText>Select all applicable</inlineHelpText>
    <label>Change Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytical Testing/Analysis</fullName>
            </value>
            <value>
                <fullName>Equipment/Parts</fullName>
            </value>
            <value>
                <fullName>Existing Supplier/Vendor</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>New Supplier/Vendor</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Starting Material</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Business Team</fullName>
                <isActive>false</isActive>
                <label>Business Team</label>
            </value>
            <value>
                <fullName>Current Supplier</fullName>
                <isActive>false</isActive>
                <label>Current Supplier</label>
            </value>
            <value>
                <fullName>Document</fullName>
                <isActive>false</isActive>
                <label>Document</label>
            </value>
            <value>
                <fullName>Drug &amp; Device Development</fullName>
                <isActive>false</isActive>
                <label>Drug &amp; Device Development</label>
            </value>
            <value>
                <fullName>Engineering</fullName>
                <isActive>false</isActive>
                <label>Engineering</label>
            </value>
            <value>
                <fullName>Equipment</fullName>
                <isActive>false</isActive>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>Facilities</fullName>
                <isActive>false</isActive>
                <label>Facilities</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <isActive>false</isActive>
                <label>IT</label>
            </value>
            <value>
                <fullName>Learning &amp; Development</fullName>
                <isActive>false</isActive>
                <label>Learning &amp; Development</label>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
                <isActive>false</isActive>
                <label>Manufacturing</label>
            </value>
            <value>
                <fullName>Materials Management</fullName>
                <isActive>false</isActive>
                <label>Materials Management</label>
            </value>
            <value>
                <fullName>Metrology</fullName>
                <isActive>false</isActive>
                <label>Metrology</label>
            </value>
            <value>
                <fullName>New Supplier</fullName>
                <isActive>false</isActive>
                <label>New Supplier</label>
            </value>
            <value>
                <fullName>Packaging &amp; Labeling</fullName>
                <isActive>false</isActive>
                <label>Packaging &amp; Labeling</label>
            </value>
            <value>
                <fullName>Product</fullName>
                <isActive>false</isActive>
                <label>Product</label>
            </value>
            <value>
                <fullName>Product Development</fullName>
                <isActive>false</isActive>
                <label>Product Development</label>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
                <isActive>false</isActive>
                <label>Quality Assurance</label>
            </value>
            <value>
                <fullName>Quality Control</fullName>
                <isActive>false</isActive>
                <label>Quality Control</label>
            </value>
            <value>
                <fullName>Regulatory Affairs</fullName>
                <isActive>false</isActive>
                <label>Regulatory Affairs</label>
            </value>
            <value>
                <fullName>Shipping &amp; Receiving</fullName>
                <isActive>false</isActive>
                <label>Shipping &amp; Receiving</label>
            </value>
            <value>
                <fullName>Supplier Site Qualification</fullName>
                <isActive>false</isActive>
                <label>Supplier Site Qualification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>