ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Change_Scope_Comment__c.field-meta.xml
<CustomField>
    <fullName>Change_Scope_Comment__c</fullName>
    <inlineHelpText>If Change Scope is Other then Change Scope Comments field is required .</inlineHelpText>
    <label>Change Scope Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>