ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/CMPL123_Days_In_Current_State__c.field-meta.xml
<CustomField>
    <fullName>CMPL123_Days_In_Current_State__c</fullName>
    <formula>CEILING( (UNIXTIMESTAMP(NOW()) - UNIXTIMESTAMP(CMPL123_Last_Workflow_State_Transitioned__c)) / 86400 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days in the Current State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>