ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/CMPL123_WF_Action__c.field-meta.xml
<CustomField>
    <fullName>CMPL123_WF_Action__c</fullName>
    <label>Workflow Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>