ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Criticality__c.field-meta.xml
<CustomField>
    <fullName>Criticality__c</fullName>
    <label>Criticality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>