ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <label>Current State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>