ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Date_Client_Notified__c.field-meta.xml
<CustomField>
    <fullName>Date_Client_Notified__c</fullName>
    <label>Date Client Notified</label>
    <type>Date</type>
</CustomField>