ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Date_Notified__c.field-meta.xml
<CustomField>
    <fullName>Date_Notified__c</fullName>
    <inlineHelpText>Populate &apos; Date Notified &apos; when &apos; Third Party Notification &apos; is set to Yes</inlineHelpText>
    <label>Date Notified</label>
    <type>Date</type>
</CustomField>