ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Department_Other__c.field-meta.xml
<CustomField>
    <fullName>Department_Other__c</fullName>
    <inlineHelpText>If Impacted Department/Group is Other then Department Other field is required</inlineHelpText>
    <label>Department Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>