ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Does_Regulatory_Need_Notified__c.field-meta.xml
<CustomField>
    <fullName>Does_Regulatory_Need_Notified__c</fullName>
    <label>Does Regulatory Need Notified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>