ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Does_this_Change_Impact_Business_Team__c.field-meta.xml
<CustomField>
    <fullName>Does_this_Change_Impact_Business_Team__c</fullName>
    <label>Does this Change Impact Business Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>