ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Target or Recommended Due Date</label>
    <type>Date</type>
</CustomField>