ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Explain_Why_Priority_Is_High__c.field-meta.xml
<CustomField>
    <fullName>Explain_Why_Priority_Is_High__c</fullName>
    <description>Explain Why Priority Is High</description>
    <label>Explain Why Priority Is High</label>
    <length>50</length>
    <type>Text</type>
</CustomField>