ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/FAM_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>FAM_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FAM Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Pre_Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>