ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/IImpact__c.field-meta.xml
<CustomField>
    <fullName>IImpact__c</fullName>
    <label>Impact To SISPQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>