ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <label>Justification</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>