ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/List_Impacted_Product__c.field-meta.xml
<CustomField>
    <fullName>List_Impacted_Product__c</fullName>
    <description>List Impacted Product when Change Scope has Product selected .</description>
    <inlineHelpText>List Impacted Product if Change Scope includes Product</inlineHelpText>
    <label>List Impacted Product If Applicable</label>
    <type>TextArea</type>
</CustomField>