ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Owner_Area__c.field-meta.xml
<CustomField>
    <fullName>Owner_Area__c</fullName>
    <label>Owner Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytical Development</fullName>
            </value>
            <value>
                <fullName>Business Team</fullName>
            </value>
            <value>
                <fullName>Drug &amp; Device Development</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Learning &amp; Development</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Materials Management</fullName>
            </value>
            <value>
                <fullName>Metrology</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Packaging &amp; Labeling</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Quality Control</fullName>
            </value>
            <value>
                <fullName>Regulatory Affairs</fullName>
            </value>
            <value>
                <fullName>Shipping &amp; Receiving</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>MS&amp;T</fullName>
                <isActive>false</isActive>
                <label>MS&amp;T</label>
            </value>
            <value>
                <fullName>Operations(OPS)</fullName>
                <isActive>false</isActive>
                <label>Operations(OPS)</label>
            </value>
            <value>
                <fullName>Plasmids Manufacturing</fullName>
                <isActive>false</isActive>
                <label>Plasmids Manufacturing</label>
            </value>
            <value>
                <fullName>Starting Materials</fullName>
                <isActive>false</isActive>
                <label>Starting Materials</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>