ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Proposed_State__c.field-meta.xml
<CustomField>
    <fullName>Proposed_State__c</fullName>
    <label>Proposed State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>