ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/RA_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>RA_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulatory Affairs Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Pre_Assessments3</relationshipName>
    <type>Lookup</type>
</CustomField>