ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Pre_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>