ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/SISQP_Comments__c.field-meta.xml
<CustomField>
    <fullName>SISQP_Comments__c</fullName>
    <inlineHelpText>Explain SISPQ Impact .</inlineHelpText>
    <label>Explain SISPQ Impact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>