ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>