ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/validationRules/Assessment_Reason_mandatory_when_denied.validationRule-meta.xml
<ValidationRule>
    <fullName>Assessment_Reason_mandatory_when_denied</fullName>
    <active>true</active>
    <description>When the Assessment Reason request is denied, reason is mandatory .</description>
    <errorConditionFormula>AND(ISPICKVAL( Assessment_Reason__c , &quot;Request Denied&quot;), ISBLANK(  Assessment_reason_comment__c ))</errorConditionFormula>
    <errorDisplayField>Assessment_reason_comment__c</errorDisplayField>
    <errorMessage>If Assessment Reason is Request Denied then reason comment field is required.</errorMessage>
</ValidationRule>