ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/validationRules/Assessment_Result_Comment_Value_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Assessment_Result_Comment_Value_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL( Assessment_Reason__c , &quot;Other&quot;),
   ISBLANK( Comment__c )
)</errorConditionFormula>
    <errorMessage>Comment field needs to be captured .</errorMessage>
</ValidationRule>