ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/validationRules/Change_Scope_Other_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Scope_Other_mandatory</fullName>
    <active>true</active>
    <description>If Change Scope is Other then Change Scope Comment field is required .</description>
    <errorConditionFormula>AND(INCLUDES( Change_Scope__c , &quot;Other&quot;), ISBLANK( Change_Scope_Comment__c ))</errorConditionFormula>
    <errorDisplayField>Change_Scope_Comment__c</errorDisplayField>
    <errorMessage>“Product” is missing on Change Scope List</errorMessage>
</ValidationRule>