ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/validationRules/Change_Scope_product_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Scope_product_mandatory</fullName>
    <active>true</active>
    <description>If Change Scope is product then &apos; List Impacted Product &apos; field is required .</description>
    <errorConditionFormula>AND(INCLUDES( Change_Scope__c , &quot;product&quot;), ISBLANK(  List_Impacted_Product__c ))</errorConditionFormula>
    <errorDisplayField>List_Impacted_Product__c</errorDisplayField>
    <errorMessage>If Change Scope is product then &apos; List Impacted Product &apos; field is required .</errorMessage>
</ValidationRule>