ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/validationRules/Date_Notified_required_for_3rd_party.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Notified_required_for_3rd_party</fullName>
    <active>true</active>
    <description>Populate &apos; Date Notified &apos; when &apos; Third Party Notification &apos; is set to Yes</description>
    <errorConditionFormula>AND(
ISPICKVAL( Third_Party_Notification__c , &quot;Yes&quot;),
ISBLANK( Date_Notified__c )
)</errorConditionFormula>
    <errorDisplayField>Date_Notified__c</errorDisplayField>
    <errorMessage>Date Notified is required when Third Party Notification is set to Yes</errorMessage>
</ValidationRule>