ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/validationRules/Explain_Why_Priority_Is_High.validationRule-meta.xml
<ValidationRule>
    <fullName>Explain_Why_Priority_Is_High</fullName>
    <active>true</active>
    <description>When priority is Yes then field &apos; Explain Why Priority Is High &apos; is mandatory</description>
    <errorConditionFormula>AND(
ISPICKVAL( Priority__c , &quot;High&quot;),
ISBLANK( Explain_Why_Priority_Is_High__c)
)</errorConditionFormula>
    <errorDisplayField>Explain_Why_Priority_Is_High__c</errorDisplayField>
    <errorMessage>When Priority/Urgency field is High then field &apos; Explain Why Priority Is High &apos; is mandatory</errorMessage>
</ValidationRule>