ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/validationRules/Impacted_Department_Comment_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Impacted_Department_Comment_mandatory</fullName>
    <active>true</active>
    <description>If Impacted Department/Group is Other then Department Other field is required.</description>
    <errorConditionFormula>AND(INCLUDES( Impacted_Department__c , &quot;Other&quot;), ISBLANK(  Department_Other__c ))</errorConditionFormula>
    <errorDisplayField>Department_Other__c</errorDisplayField>
    <errorMessage>If Impacted Department/Group is Other then Department Other field is required .</errorMessage>
</ValidationRule>