ConnexoProject/force-app/main/default/objects/Change_Control_PA__c/validationRules/SISQP_Comments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SISQP_Comments_Required</fullName>
    <active>true</active>
    <description>If SISQP is yes then SISQP Comment is mandatory</description>
    <errorConditionFormula>AND(ISPICKVAl( IImpact__c , &quot;Yes&quot;), ISBLANK( SISQP_Comments__c ))</errorConditionFormula>
    <errorDisplayField>SISQP_Comments__c</errorDisplayField>
    <errorMessage>If Impact To SISQP is Yes then SISQP Comments field is required</errorMessage>
</ValidationRule>